--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body.light {
+  background: var(--bg-light);
+  color: var(--txt-light);
+}
+
+body.dark {
+  background: var(--bg-dark);
+  color: var(--txt-dark);
+}
