--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,10 @@
   box-sizing: border-box;
 }
 
+body {
+  transition: background .2s ease, color .2s ease;
+}
+
 body.light {
   background: var(--bg-light);
   color: var(--txt-light);
