--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,28 @@
 }
 
 body {
-  transition: background .2s ease, color .2s ease;
+  margin: auto;
+
+  width: 100%;
+  max-width: 400px;
+  min-height: 100dvh;
+
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+
+  transition:
+    background 0.2s ease,
+    color 0.2s ease;
 }
 
 body.light {
@@ -26,4 +47,8 @@ body.light {
 body.dark {
   background: var(--bg-dark);
   color: var(--txt-dark);
+}
+
+h1 {
+  text-align: center;
 }
