--- a/public/style.css
+++ b/public/style.css
@@ -52,3 +52,22 @@ body.dark {
 h1 {
   text-align: center;
 }
+
+.users-list {
+  list-style: none;
+  font-size: 1.3rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.users-list li {
+  padding: 1rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  background: lightblue;
+}
