--- a/public/style.css
+++ b/public/style.css
@@ -69,5 +69,26 @@ h1 {
   justify-content: space-between;
   align-items: center;
 
-  background: lightblue;
+  border-radius: 10px;
+
+  background: rgba(82, 82, 82, 0.307);
+}
+
+.users-list li .btns-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+
+}
+
+.users-list li .btns-container button {
+  cursor: pointer;
+
+  padding: .3rem;
+
+  border: 2px solid currentColor;
+  border-radius: 5px;
+
+  color: currentColor;
+  background: transparent;
 }
